# AlpinChat

./: .gitignore  README.md  settings.gradle.kts
.github/workflows/: release.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  tokenizer_jni.c
app/src/main/cpp/tokenizer/: simd.c
app/src/main/java/com/alpin/chat/: ChatApplication.kt  MainActivity.kt
app/src/main/java/com/alpin/chat/data/local/datastore/: SettingsDataStore.kt
app/src/main/java/com/alpin/chat/data/repository/: ChatRepository.kt  ConversationRepository.kt  MessageRepository.kt  ModelConfigRepository.kt
app/src/main/java/com/alpin/chat/di/: AppModule.kt  DatabaseModule.kt  NetworkModule.kt
app/src/main/java/com/alpin/chat/domain/model/: Conversation.kt  Message.kt  ModelConfig.kt
app/src/main/java/com/alpin/chat/service/: GenerationService.kt
app/src/main/java/com/alpin/chat/tokenizer/: ContextManager.kt  NativeTokenizer.kt
app/src/main/java/com/alpin/chat/ui/components/: ChatBubble.kt  ChatInput.kt  ConversationItem.kt  MarkdownText.kt  ModelSelector.kt  TypingIndicator.kt
app/src/main/java/com/alpin/chat/ui/navigation/: NavGraph.kt
app/src/main/java/com/alpin/chat/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_notification.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml  themes.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml
(+19 files in other folders)
